--- a/ex1/style.css
+++ b/ex1/style.css
@@ -6,11 +6,16 @@
 
 body {
     font-family: "Poppins", sans-serif;
-    margin: 0;
+    margin-top: 3rem;
     height: 100vh;
     display: grid;
-    place-items: center;
+    place-items: top;
     text-align: center;
+    background-image: url(wallpapersden.com_purple-sunrise-4k-vaporwave_1920x1080.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    color: #1c489a;
+    text-shadow: #FFF 0px 0px 5px, #FFF 0px 0px 10px, #FFF 0px 0px 15px, #FF2D95 0px 0px 20px, #FF2D95 0px 0px 30px, #FF2D95 0px 0px 40px, #FF2D95 0px 0px 50px, #FF2D95 0px 0px 75px;
 }
 
 .timer{
